--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "discrete"
-version = "0.0.5"
+version = "0.0.6"
 authors = ["bvssvni <bvssvni@gmail.com>"]
 keywords = ["mathematics", "combinatorics", "phantom-types"]
 description = "Combinatorial phantom types for discrete mathematics"
@@ -14,3 +14,6 @@ homepage = "https://github.com/bvssvni/discrete"
 
 name = "discrete"
 path = "src/lib.rs"
+
+[dependencies.num]
+version = "*"
