--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/advancedresearch/discrete.git"
 homepage = "https://github.com/advancedresearch/discrete"
+exclude = ["assets/*"]
 
 [lib]
 
