--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,13 @@ name = "discrete"
 path = "src/lib.rs"
 
 [dependencies]
-num = "0.4.0"
+num-bigint = "0.4.6"
+
+[dependencies.num-traits]
+version = "0.2.19"
+default-features = false
+
+[dependencies.num-integer]
+version = "0.1.46"
+default-features = false
+
