--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 repository = "https://github.com/advancedresearch/discrete.git"
 homepage = "https://github.com/advancedresearch/discrete"
 exclude = ["assets/*"]
+edition = "2024"
 
 [lib]
 
